# bankroll-simulator-backend

./: .env.example  CLAUDE.md  Cargo.toml  README.md  config.toml
src/: cli.rs  lib.rs  runner.rs
src/core/: config.rs  mod.rs  simulation.rs  stats.rs
src/output/: json.rs  text.rs
