[package]
name = "br"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "br"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
axum        = "0.8"
clap       = { version = "4.6", features = ["derive"] }
rand       = "0.9"
rand_distr = "0.5"
rayon      = "1.11"
serde      = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1", features = ["full"] }
toml       = "0.8"
tower-http  = { version = "0.6", features = ["cors"] }

[profile.release]
codegen-units = 1
lto = "thin"
