[package]
name = "br"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "br"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
axum        = "0.8"
clap       = { version = "4.6", features = ["derive"] }
dotenvy    = "0.15"
rand       = "0.10"
rand_distr = "0.6"
rayon      = "1.11"
serde      = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1.5", features = ["full"] }
toml       = "1.1"
tower-http  = { version = "0.6", features = ["cors"] }

[profile.release]
codegen-units = 1
lto = "thin"
